# chatgpt-export-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chatgpt_export_cli_converter/: __init__.py  cli.py  core.py
tests/: test_converter.py
