[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-export-cli-converter"
version = "0.1.1"
description = "Convert ChatGPT exports into local Markdown files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Colm" }]
dependencies = []

[project.scripts]
chatgpt-export = "chatgpt_export_cli_converter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
